# hikconnect

./: .gitignore  .pylint.ini  .travis.yml  .verchew.ini  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml  release.yml
hikconnect/: __init__.py  api.py  exceptions.py
hikconnect/isapi/: transports.py
hikconnect/isapi/commands/: __init__.py  system.py
tests/: __init__.py  test_api.py  test_isapi.py  test_manual.py
