[tool.poetry]

name = "hikconnect"
version = "1.2.0"
description = "Communicate with Hikvision smart doorbells via Hik-Connect cloud."

license = "MIT"

authors = ["Tomas Bedrich <ja@tbedrich.cz>"]

readme = "README.md"

homepage = "https://pypi.org/project/hikconnect"
documentation = "https://hikconnect.readthedocs.io"
repository = "https://github.com/tomasbedrich/hikconnect"

keywords = [
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
]

[tool.poetry.dependencies]

python = "^3.8"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]

python-dotenv = "^1.0.0"

# Formatters
black = "^23.7.0"
isort = "^5.12.0"

# Linters
mypy = "^1.5.1"
pydocstyle = "^6.3.0"
pylint = "^2.17.5"

# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-describe = "^2.1.0"
pytest-expecter = "^3.0"
pytest-random = "^0.02"
pytest-asyncio = "^0.14.0"
pytest-dotenv = "^0.5.2"
aioresponses = "^0.7.4"

# Reports
coveragespace = "^6.0.2"

# Documentation
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"
mkdocstrings = "^0.22.0"
pygments = "^2.16.1"

[tool.black]

target-version = ["py36", "py37", "py38"]

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
