[tool.poetry]

name = "hikconnect"
version = "1.3.1"
description = "Communicate with Hikvision smart doorbells via Hik-Connect cloud."

license = "MIT"

authors = ["Tomas Bedrich <ja@tbedrich.cz>"]

readme = "README.md"

homepage = "https://pypi.org/project/hikconnect"
documentation = "https://hikconnect.readthedocs.io"
repository = "https://github.com/tomasbedrich/hikconnect"

keywords = [
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
]

[tool.poetry.dependencies]

python = "^3.11"
# aiohttp 3.14 is not yet supported by aioresponses (https://github.com/pnuckowski/aioresponses/issues/289)
aiohttp = ">=3.13,<3.14"

[tool.poetry.group.dev.dependencies]

python-dotenv = "^1.0.0"

# Formatters
black = "^25.1.0"
isort = "^6.0.0"

# Linters
mypy = "^1.14.0"
pydocstyle = "^6.3.0"
pylint = "^3.3.5"

# Testing
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-describe = "^2.2.0"
pytest-expecter = "^3.0"
pytest-random = "^0.02"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
aioresponses = "^0.7.8"

# Reports
coveragespace = "^6.1.0"

# Documentation
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = "^0.27.0"
pygments = "^2.18.0"

[tool.black]

target-version = ["py311"]

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
