[tool.poetry]

name = "hikconnect"
version = "0.0.0"  # placeholder - the real version is derived from the git tag, see [tool.poetry-dynamic-versioning]
description = "Communicate with Hikvision smart doorbells via Hik-Connect cloud."

license = "MIT"

authors = ["Tomas Bedrich <ja@tbedrich.cz>"]

readme = "README.md"

homepage = "https://pypi.org/project/hikconnect"
documentation = "https://hikconnect.readthedocs.io"
repository = "https://github.com/tomasbedrich/hikconnect"

keywords = [
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
]

[tool.poetry.dependencies]

python = "^3.11"
aiohttp = "^3.14.1"

[tool.poetry.group.dev.dependencies]

python-dotenv = "^1.0.0"

# Formatters
black = "^25.1.0"
isort = "^6.0.0"

# Linters
mypy = "^1.14.0"
pydocstyle = "^6.3.0"
pylint = "^3.3.5"

# Testing
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-describe = "^2.2.0"
pytest-expecter = "^3.0"
pytest-random = "^0.02"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
aioresponses-ng = "^0.8.2"

# Reports
coveragespace = "^6.1.0"

# Documentation
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = "^0.27.0"
pygments = "^2.18.0"

[tool.black]

target-version = ["py311"]

[tool.poetry-dynamic-versioning]

enable = true
vcs = "git"
style = "pep440"
pattern = "default-unprefixed"  # tags are plain "1.2.3", without "v" prefix

[build-system]

requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
